--- a/SandFall/styles/mobile/blog.css
+++ b/SandFall/styles/mobile/blog.css
@@ -66,15 +66,19 @@
         top: 0;
         left: 0;
         z-index: 1;
-    }
-
-    .post-content {
+    }    .post-content {
         width: 100%;
+        height: 100%;
         padding: 25px;
-        background: rgba(0, 0, 0, 0.85);
-        position: relative;
+        background: rgba(0, 0, 0, 0.9);
+        position: absolute;
+        top: 0;
+        left: 0;
         z-index: 2;
-        margin-top: auto;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }.post-header {
         flex-direction: column;
         align-items: flex-start;
