--- a/smag/mobile-styles.css
+++ b/smag/mobile-styles.css
@@ -73,7 +73,7 @@
     padding: 0 !important;
     border-radius: 0 !important;
     font-size: 14px !important;
-    margin-right: 10px !important;
+    margin: 10px !important;
     order: -1;
   }
   
@@ -96,6 +96,18 @@
     font-size: 22px;
     line-height: 1.6;
   }
+
+  .navItems li a { font-size: 20px;}
+
+  .pic-ctn { max-height: 400px;}
+
+  .personal-card-container {
+    max-width: 95% !important;
+  }
+
+  .personal-card {
+    max-width: 100% !important;
+  }
 }
 
 @media (max-width: 800px) {
@@ -105,7 +117,7 @@
 
   .personal-card-container {
         width: 100% !important;
-        min-width: none!important;
+        min-width: 10px!important;
   }
 
   .blog-popup-close-btn {
